--- a/EDA/UnderstandData/queries.ipynb
+++ b/EDA/UnderstandData/queries.ipynb
@@ -9,9 +9,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animals</th>\n",
+       "      <th>birds</th>\n",
+       "      <th>insets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lion</td>\n",
+       "      <td>eagle</td>\n",
+       "      <td>ants</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tiger</td>\n",
+       "      <td>canary</td>\n",
+       "      <td>butterfly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>rabbit</td>\n",
+       "      <td>sparrow</td>\n",
+       "      <td>bugs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fox</td>\n",
+       "      <td>pigeon</td>\n",
+       "      <td>snail</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>vulture</td>\n",
+       "      <td>beetle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>bear</td>\n",
+       "      <td>peacock</td>\n",
+       "      <td>spider</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animals    birds     insets\n",
+       "0    lion    eagle       ants\n",
+       "1   tiger   canary  butterfly\n",
+       "2  rabbit  sparrow       bugs\n",
+       "3     fox   pigeon      snail\n",
+       "4     dog  vulture     beetle\n",
+       "5    bear  peacock     spider"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "animals = ['lion', 'tiger', 'rabbit', 'fox', 'dog', 'bear']\n",
+    "birds = ['eagle', 'canary', 'sparrow', 'pigeon', 'vulture', 'peacock']\n",
+    "insets = ['ants', 'butterfly', 'bugs', 'snail', 'beetle', 'spider']\n",
+    "df = pd.DataFrame({'animals': animals, 'birds':birds, 'insets':insets})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
@@ -25,12 +132,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>animals</th>\n",
+       "      <th>birds</th>\n",
+       "      <th>insets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>lion</td>\n",
+       "      <td>eagle</td>\n",
+       "      <td>ants</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>tiger</td>\n",
+       "      <td>canary</td>\n",
+       "      <td>butterfly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>rabbit</td>\n",
+       "      <td>sparrow</td>\n",
+       "      <td>bugs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>vulture</td>\n",
+       "      <td>beetle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fox</td>\n",
+       "      <td>pigeon</td>\n",
+       "      <td>snail</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  animals    birds     insets\n",
+       "0    lion    eagle       ants\n",
+       "1   tiger   canary  butterfly\n",
+       "2  rabbit  sparrow       bugs\n",
+       "4     dog  vulture     beetle\n",
+       "3     fox   pigeon      snail"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()\n",
-    "df,sample(5)  #returns 5 random rows from df"
+    "df.sample(5)  #returns 5 random rows from df"
    ]
   },
   {
